--- a/public/product.html
+++ b/public/product.html
@@ -17,6 +17,9 @@
         </a>
         <ul>
             <li><a href="main.html">Home</a></li>
+            <li><a href="ai-recommendation.html">AI Recommendation</a></li>
+
+            
         </ul>
         <div class="nav-icons">
             <a href="carte page.html"><img src="img/cart-icon.png" alt="Cart"></a>
