--- a/public/dashbord.html
+++ b/public/dashbord.html
@@ -126,7 +126,7 @@
             </div>
             <ul class="dashboard-menu">
                 <li><a href="main.html" class="active"><i class="fas fa-home"></i> Dashboard</a></li>
-                <li><a href="/orders"><i class="fas fa-book"></i> My Orders <span id="orderCountBadge" class="badge">0</span></a></li>
+                <li><a href="/order.html"><i class="fas fa-book"></i> My Orders <span id="orderCountBadge" class="badge">0</span></a></li>
                 <li><a href="/wishlist"><i class="fas fa-heart"></i> Wishlist</a></li>
                 <li><a href="/settings"><i class="fas fa-cog"></i> Settings</a></li>
             </ul>
