your commit message here

--- a/public/product.html
+++ b/public/product.html
@@ -23,6 +23,7 @@
         </ul>
         <div class="nav-icons">
             <a href="carte page.html"><img src="img/cart-icon.png" alt="Cart"></a>
+            <a href="wishlist.html"><img src="img/icons8-wishlist-58.png" alt="wishlist"></a>
             <a href="#" id="search-icon"><img src="img/search.png" alt="Search"></a>
             <input type="text" id="search-box" placeholder="Search books..." style="display:none;">
         </div>
