ton message de commit

--- a/public/About us.html
+++ b/public/About us.html
@@ -17,7 +17,7 @@
         <div class="nav-links">
             <a href="main.html">Home</a>
             <a href="product.html">Collections</a>
-            <a href="blog.html">Blog</a>
+            <a href="contactus.html">Contact</a>
         </div>
         <div class="menu-toggle">
             <img src="img/menu.png" alt="Menu" width="24">
@@ -55,7 +55,7 @@
             <h2>Our Literary Journey</h2>
             <p>Established in 2010, Bookshelf has grown from a small neighborhood bookstore to a leading literary hub. Our curated collections span 25 genres, offering both timeless classics and contemporary masterpieces.</p>
             <p>We partner with independent authors and major publishers to bring diverse voices to our shelves. Our expert team selects each title through a rigorous review process, ensuring quality and relevance.</p>
-            <button class="btn">Explore Collection</button>
+            <button class="btn" onclick="window.location.href='product.html'">Explore Collection</button>
         </div>
     </section>
 
