--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -74,11 +74,11 @@
                 <div class="footer-col">
                     <h4>Publishers</h4>
                     <ul>
-                        <li><a href="#">Bestsellers</a></li>
-                        <li><a href="#">Interviews</a></li>
-                        <li><a href="#">Authors story</a></li>
-                        <li><a href="#">Book Fairs</a></li>
-                        <li><a href="#">Help (FAQ)</a></li>
+                        <li><a href="bestselling.html">Bestsellers</a></li>
+                        <li><a href="interview.html">Interviews</a></li>
+                        <li><a href="authorstory.html">Authors story</a></li>
+                        <li><a href="bookfair.html">Book Fairs</a></li>
+                        <li><a href="FAQ.html">Help (FAQ)</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -86,16 +86,16 @@
                     <ul>
                         <li><a href="#">Shipping</a></li>
                         <li><a href="#">Returns</a></li>
-                        <li><a href="#">Order Status</a></li>
-                        <li><a href="#">Payment Options</a></li>
+                        <li><a href="order.html">Order Status</a></li>
+                        <li><a href="paymentoptions.html">Payment Options</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Online Shop</h4>
                     <ul>
-                        <li><a href="#">Books</a></li>
-                        <li><a href="#">Ebooks</a></li>
-                        <li><a href="#">Magazines</a></li>
+                        <li><a href="product.html">Books</a></li>
+                        <li><a href="product.html">Ebooks</a></li>
+                        <li><a href="product.html">Magazines</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
