--- a/public/blog.html
+++ b/public/blog.html
@@ -10,7 +10,7 @@
     <body>
         <header class="main-header">
             <nav class="nav-container">
-                <a href="#" class="logo">The Literary Vault</a>
+                <a href="" class="logo">The Literary Vault</a>
                 <nav class="main-nav">
                     <a href="#fiction">Fiction</a>
                     <a href="#nonfiction">Non-Fiction</a>
