--- a/public/contactus.html
+++ b/public/contactus.html
@@ -18,10 +18,11 @@
         <li><a href="main.html">Home</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="product.html">Shop</a></li>
+        <li><a href="contactus.html" class="active">Contact</a></li>
+
     </ul>
     <div class="nav-icons">
         <a href="carte page.html"><img src="img/cart-icon.png" alt="Cart"></a>
-        <a href="#"><img src="img/more.png" alt="Menu"></a>
     </div>
 </nav>
 <iframe 
