--- a/public/exchange.html
+++ b/public/exchange.html
@@ -14,17 +14,13 @@
     </a>
     <ul>
       <li><a href="main.html">Home</a></li>
-      <li><a href="blog.html">Blog</a></li>
       <li><a href="product.html">Shop</a></li>
-      <a href="exchangerequest.html"><img src="img/dashboard-icon.png" alt="Request" /></a>
-    </ul>
-    <div class="nav-icons">
-      <a href="#"><img src="img/cart-icon.png" alt="Cart" /></a>
-      <a href="#"><img src="img/search.png" alt="Search" /></a>
-      <a href="#"><img src="img/more.png" alt="Menu" /></a>
-    </div>
-  </nav>
+      <li><a href="exchange.html" class="active">Exchange</a></li>
+      <li><a href="exchangerequest.html">Request</a></li>
+  
 
+    </ul>
+  </nav>
   <div class="container1">
     <h2>📚 Upload or Exchange Books/Documents</h2>
     <form action="/api/exchange" method="POST">
@@ -63,11 +59,11 @@
         <div class="footer-col">
           <h4>Publishers</h4>
           <ul>
-            <li><a href="#">Bestsellers</a></li>
-            <li><a href="#">Interviews</a></li>
-            <li><a href="#">Authors story</a></li>
-            <li><a href="#">Book Fairs</a></li>
-            <li><a href="#">Help (FAQ)</a></li>
+            <li><a href="bestselling.html">Bestsellers</a></li>
+            <li><a href="interview.html">Interviews</a></li>
+            <li><a href="authorstory.html">Authors story</a></li>
+            <li><a href="bookfair.html">Book Fairs</a></li>
+            <li><a href="FAQ.html">Help (FAQ)</a></li>
           </ul>
         </div>
         <div class="footer-col">
@@ -75,16 +71,16 @@
           <ul>
             <li><a href="#">Shipping</a></li>
             <li><a href="#">Returns</a></li>
-            <li><a href="#">Order Status</a></li>
-            <li><a href="#">Payment Options</a></li>
+            <li><a href="order.html">Order Status</a></li>
+            <li><a href="paymentoptions.html">Payment Options</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Online Shop</h4>
           <ul>
-            <li><a href="#">Books</a></li>
-            <li><a href="#">Ebooks</a></li>
-            <li><a href="#">Magazines</a></li>
+            <li><a href="product.html">Books</a></li>
+            <li><a href="product.html">Ebooks</a></li>
+            <li><a href="product.html">Magazines</a></li>
           </ul>
         </div>
         <div class="footer-col">
