--- a/public/exchangerequest.html
+++ b/public/exchangerequest.html
@@ -174,8 +174,8 @@
     }
   
     function handleExchange(matchId) {
-      alert(`Starting exchange for match ID: ${matchId}`);
-    }
+  window.location.href = `/chat.html?exchangeId=${matchId}`;
+}
   </script>
   
 </body>
