--- a/public/pricing.html
+++ b/public/pricing.html
@@ -9,9 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
-        FREE SHIPPING FOR ORDERS OVER $50
-    </header>
     <nav class="navbar">
         <a href="#" class="logo">
             <img src="img/logo (2).png" alt="Bookshelf">
@@ -20,9 +17,10 @@
             <li><a href="main.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="product.html">Shop</a></li>
+            <li><a href="pricing.html" class="active">Pricing</a></li>
         </ul>
         <div class="nav-icons">
-            <a href="#"><img src="img/cart-icon.png" alt="Cart"></a>
+            <a href="product.html"><img src="img/cart-icon.png" alt="Cart"></a>
         </div>
     </nav>
     <div class="main-content">
@@ -31,7 +29,7 @@
             <div class="titre">
                 <p class="title">pricing options</p>
                 <h2 class="latest">Latest books online</h2>
-                <p class="uinim">Uinim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+                <p class="uinim">Explore a wide range of books at unbeatable prices</p>
             </div>
             <div class="content">
                 <div class="card">
@@ -41,9 +39,9 @@
                     <div class="info">
                         <p class="price">$ <span class="amount">9.00</span> <span class="monthly">/ MONTHLY</span></p>
                         <ul class="list">
-                            <li>Pellentesque id dui porttitor</li>
-                            <li>Mauris a nibh in tellus varius</li>
-                            <li>Nam ut dolor viverra, rutrum</li>
+                            <li>Unlimited access to all features</li>
+                            <li>24/7 customer support</li>
+                            <li>Exclusive member discounts</li>
                         </ul>
                         <button class="buy-button">BUY NOW</button>
                     </div>
@@ -56,9 +54,9 @@
                     <div class="info">
                         <p class="price">$ <span class="amount">49.00</span> <span class="monthly">/ MONTHLY</span></p>
                         <ul class="list">
-                            <li>Pellentesque id dui porttitor</li>
-                            <li>Mauris a nibh in tellus varius</li>
-                            <li>Nam ut dolor viverra, rutrum</li>
+                            <li>Access to premium content and resources</li>
+                            <li>Regular updates and new features added</li>
+                            <li>Personalized recommendations and offers</li>
                         </ul>
                         <button class="buy-button">BUY NOW</button>
                     </div>
@@ -71,9 +69,9 @@
                     <div class="info">
                         <p class="dollar">$ <span class="amount">99.00</span> <span class="monthly">/ MONTHLY</span></p>
                         <ul class="parag">
-                            <li>Pellentesque id dui porttitor</li>
-                            <li>Mauris a nibh in tellus varius</li>
-                            <li>Nam ut dolor viverra, rutrum</li>
+                            <li>Early access to new releases and products</li>
+                            <li>Customizable plans to fit your needs</li>
+                            <li>Ad-free experience for uninterrupted browsing</li>
                         </ul>
                         <button class="buy-button">BUY NOW</button>
                     </div>
