--- a/public/product.html
+++ b/public/product.html
@@ -18,6 +18,8 @@
         <ul>
             <li><a href="main.html">Home</a></li>
             <li><a href="ai-recommendation.html">AI Recommendation</a></li>
+            <li><a href="product.html" class="active">Shop</a></li>
+
 
             
         </ul>
