--- a/public/dashbord.html
+++ b/public/dashbord.html
@@ -4,118 +4,341 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | Bookshelf</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant&display=swap" rel="stylesheet">
-</head>
-<style>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/YOUR_KIT_ID.js" crossorigin="anonymous"></script>
+    <style>
+:root {
+  --primary-dark: #0A0A0A;
+  --secondary-dark: #1F1F1F;
+  --accent-light: #E8E8E8;
+  --soft-grey: #AAAAAA;
+  --border-grey: rgba(232, 232, 232, 0.1);
+  --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body {
+    margin: 0;
+    font-family: 'Cormorant', serif;
+    background: var(--primary-dark);
+    color: var(--accent-light);
+    line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+}
+
+.dashboard-container {
+    display: flex;
+    min-height: 100vh;
+    background: linear-gradient(45deg, var(--primary-dark) 0%, #151515 100%);
+}
+
+.dashboard-sidebar {
+    width: 280px;
+    background: var(--secondary-dark);
+    padding: 2rem 1.5rem;
+    border-right: 1px solid rgba(232, 232, 232, 0.1);
+    position: relative;
+    z-index: 2;
+}
+
+.dashboard-main {
+    flex: 1;
+    padding: 3rem;
+    position: relative;
+}
+
+.user-profile {
+    text-align: center;
+    margin-bottom: 2.5rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(232, 232, 232, 0.1);
+}
+
+.user-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
+    border: 3px solid var(--gold-accent);
+    object-fit: cover;
+}
+
+.dashboard-menu {
+    list-style: none;
+    padding: 0;
+    margin: 2rem 0;
+}
+
+.dashboard-menu li {
+    margin: 0.8rem 0;
+    position: relative;
+}
+
+.dashboard-menu a {
+    display: flex;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    color: var(--accent-light);
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--transition);
+    position: relative;
+    font-weight: 500;
+}
+
+.dashboard-menu a:hover {
+    background: rgba(232, 232, 232, 0.05);
+    transform: translateX(5px);
+}
+
+.dashboard-menu .active {
+    background: rgba(232, 232, 232, 0.08);
+    border-left: 4px solid var(--gold-accent);
+    transform: translateX(8px);
+}
+
+.dashboard-menu i {
+    width: 28px;
+    font-size: 1.1rem;
+    margin-right: 1rem;
+    color: var(--gold-accent);
+}
+
+.dashboard-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.card {
+    background: var(--secondary-dark); 
+    padding: 1rem;
+    border-radius: 12px;
+    border: 1px solid var(--border-grey);
+    position: relative;
+    overflow: hidden;
+    transition: var(--transition);
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.05); 
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 4px;
+    height: 100%;
+    background: var(--accent-light);
+}
+
+.card h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    color: var(--accent-light); 
+    position: relative;
+    padding-bottom: 0.5rem;
+}
+
+.card h3::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: rgba(255, 255, 255, 0.1); 
+}
+
+
+.recent-orders {
+    margin-top: 1.5rem;
+}
+
+.order-item {
+    padding: 1.2rem;
+    background: rgba(232, 232, 232, 0.03);
+    border-radius: 8px;
+    margin-bottom: 1rem;
+    transition: var(--transition);
+}
+
+.order-item:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+}
+
+.account-info li {
+    padding: 1rem;
+    background: rgba(232, 232, 232, 0.03);
+    border-radius: 6px;
+    margin: 0.8rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.badge {
+    background: var(--gold-accent);
+    color: var(--primary-dark);
+    padding: 0.4rem 1rem;
+    border-radius: 20px;
+    font-weight: 600;
+    font-size: 0.85rem;
+}
+
+.verified-badge {
+    background: #2E7D32;
+    color: var(--accent-light);
+}
+
+.unverified-badge {
+    background: #C62828;
+}
+
+.user-item {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+    padding: 1rem;
+    background: rgba(232, 232, 232, 0.03);
+    margin-bottom: 0.8rem;
+    border-radius: 6px;
+}
+
+.go-home-btn {
+    display: inline-flex;
+    align-items: center;
+    padding: 1rem 2rem;
+    margin-top: 2rem;
+    background: var(--gold-accent);
+    color: var(--primary-dark);
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--transition);
+    font-weight: 600;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 10;
+}
+
+.go-home-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 15px rgba(212, 175, 55, 0.2);
+}
+
+.input-group {
+    margin-bottom: 1rem;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 0.5rem;
+    color: var(--gold-accent);
+    font-weight: 600;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 0.8rem 1rem;
+    background: var(--primary-dark);
+    border: 1px solid rgba(232, 232, 232, 0.1);
+    color: var(--accent-light);
+    border-radius: 6px;
+    font-size: 1rem;
+}
+
+.btn-submit {
+    padding: 0.8rem 2rem;
+    background: var(--gold-accent);
+    color: var(--primary-dark);
+    font-weight: bold;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.btn-submit:hover {
+    background: #e5c76a;
+    box-shadow: 0 4px 12px rgba(212, 175, 55, 0.2);
+}
+
+@media (max-width: 768px) {
     .dashboard-container {
-        display: flex;
-        min-height: 100vh;
-        font-family: 'Cormorant', serif;
-        background-color: #f5f5f5;
+        flex-direction: column;
     }
+
     .dashboard-sidebar {
-        width: 250px;
-        background: #fff;
-        padding: 20px;
-        box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+        width: 100%;
+        padding: 1.5rem;
     }
+
     .dashboard-main {
-        flex: 1;
-        padding: 30px;
+        padding: 2rem;
     }
-    .user-profile {
-        text-align: center;
-        margin-bottom: 30px;
-    }
-    .user-avatar {
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        margin-bottom: 15px;
-    }
-    .dashboard-menu {
-        list-style: none;
-        padding: 0;
-    }
-    .dashboard-menu li {
-        margin: 10px 0;
-    }
-    .dashboard-menu a {
-        display: block;
-        padding: 10px;
-        color: #333;
-        text-decoration: none;
-        transition: all 0.3s;
-    }
-    .dashboard-menu a:hover {
-        background: #f0f0f0;
-        border-radius: 4px;
-    }
-    .dashboard-menu .active {
-        background: #f8f8f8;
-        border-left: 4px solid #8b5a2b;
-    }
-    .dashboard-cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 20px;
-        margin-top: 20px;
-    }
-    .card {
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .recent-orders {
-        margin-top: 15px;
-    }
-    .account-info li {
-        margin: 10px 0;
-        padding: 8px;
-        background: #f9f9f9;
-        border-radius: 4px;
-    }
-    .go-home-btn {
-        margin-top: 20px;
-        padding: 10px 20px;
-        background-color: #8b5a2b;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-        display: inline-block;
-    }
-    .go-home-btn:hover {
-        background-color: #a06d45;
-    }
-    .badge {
-        background: #8b5a2b;
-        color: white;
-        padding: 2px 8px;
-        border-radius: 12px;
-        font-size: 0.8em;
-    }
+
     .user-item {
-        display: grid;
-        grid-template-columns: 2fr 2fr 1fr;
-        gap: 15px;
-        padding: 10px;
-        border-bottom: 1px solid #eee;
+        grid-template-columns: 1fr;
     }
-    #adminSection .card {
-        margin-top: 20px;
-    }
-    @media (max-width: 768px) {
-        .dashboard-container {
-            flex-direction: column;
-        }
-        .dashboard-sidebar {
-            width: 100%;
-            padding: 15px;
-        }
-    }
-</style>
+}
+
+.skeleton-loader {
+    background: linear-gradient(90deg, rgba(232,232,232,0.05) 25%, rgba(232,232,232,0.1) 50%, rgba(232,232,232,0.05) 75%);
+    background-size: 200% 100%;
+    animation: shimmer 1.5s infinite;
+    border-radius: 6px;
+}
+
+@keyframes shimmer {
+    0% { background-position: 200% 0; }
+    100% { background-position: -200% 0; }
+}
+
+#adminSection {
+    margin-top: 3rem;
+    border-top: 1px solid rgba(232, 232, 232, 0.1);
+    padding-top: 2rem;
+}
+
+.stats-card {
+    background: linear-gradient(135deg, rgba(232,232,232,0.03) 0%, rgba(232,232,232,0.01) 100%);
+    padding: 2rem;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.stats-card h4 {
+    font-size: 2rem;
+    margin: 1rem 0;
+    color: var(--gold-accent);
+}
+#resendVerification {
+    display: none;
+    margin-left: 10px;
+    padding: 0.6rem 1.2rem;
+    background: var(--secondary-dark);
+    color: var(--accent-light);
+    border: 1px solid var(--border-grey);
+    border-radius: 6px;
+    font-family: 'Cormorant', serif;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+#resendVerification:hover {
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.05);
+    transform: translateY(-2px);
+}
+
+    </style>
 <body>
     <div class="dashboard-container">
         <div class="dashboard-sidebar">
@@ -145,9 +368,27 @@
                     <h3>Account Overview</h3>
                     <ul class="account-info">
                         <li>Member since: <span id="joinDate">2024</span></li>
+                        <li>Email verification: 
+                            <span id="verificationStatus" class="badge">Unverified</span>
+                            <button id="resendVerification" style="display:none; margin-left:10px;" class="btn-small">Resend Verification</button>
+                        </li>
                         <li>Total orders: 0</li>
                         <li>Wishlist items: 0</li>
                     </ul>
+                </div>
+                <div class="card">
+                    <h3>Change Password</h3>
+                    <form id="changePasswordForm" onsubmit="return handlePasswordChange(event)">
+                        <div class="input-group">
+                            <label>Current Password</label>
+                            <input type="password" id="currentPassword" required>
+                        </div>
+                        <div class="input-group">
+                            <label>New Password</label>
+                            <input type="password" id="newPassword" required>
+                        </div>
+                        <button type="submit" class="btn-submit">Change Password</button>
+                    </form>
                 </div>
             </div>
             <div id="adminSection" style="display: none;">
@@ -179,6 +420,29 @@
                     document.getElementById('userName').textContent = user.name;
                     document.getElementById('userEmail').textContent = user.email;
                     document.getElementById('userFirstName').textContent = user.name.split(' ')[0];
+                    const verificationStatus = document.getElementById('verificationStatus');
+                    const resendBtn = document.getElementById('resendVerification');
+
+                    if (user.verified) {
+                        verificationStatus.textContent = 'Verified';
+                        verificationStatus.classList.add('verified-badge');
+                        resendBtn.style.display = 'none';
+                    } else {
+                        verificationStatus.textContent = 'Unverified';
+                        verificationStatus.classList.add('unverified-badge');
+                        resendBtn.style.display = 'inline-block';
+                    }
+
+                    resendBtn.addEventListener('click', async (e) => {
+                        e.preventDefault();
+                        try {
+                            await fetch('/auth/resend-verification', { method: 'POST' });
+                            alert('Verification email resent! Check your inbox.');
+                        } catch (error) {
+                            alert('Error resending verification email');
+                        }
+                    });
+
                     loadOrders();
 
                     if (user.role === 'admin') {
@@ -204,7 +468,6 @@
                 }
             })
             .catch(error => {
-                console.error('Error loading user data:', error);
                 document.getElementById('userName').textContent = 'Guest';
                 document.getElementById('userEmail').textContent = '';
             });
@@ -215,9 +478,7 @@
                     credentials: 'include'
                 });
                 const { orders } = await response.json();
-
                 document.getElementById('orderCountBadge').textContent = orders.length;
-
                 const ordersContainer = document.getElementById('recentOrders');
                 if (orders.length === 0) {
                     ordersContainer.innerHTML = '<p>No recent orders.</p>';
@@ -240,7 +501,6 @@
                     `).join('');
                 }
             } catch (error) {
-                console.error('Error loading orders:', error);
                 document.getElementById('recentOrders').innerHTML = '<p>Error loading orders.</p>';
             }
         }
@@ -264,11 +524,30 @@
                         <span>Joined: ${new Date(user.created_at).toLocaleDateString()}</span>
                     </div>
                 `).join('');
-            } catch (error) {
-                console.error('Admin data error:', error);
-            }
+            } catch (error) {}
         }
 
+        async function handlePasswordChange(e) {
+            e.preventDefault();
+            const currentPassword = document.getElementById('currentPassword').value;
+            const newPassword = document.getElementById('newPassword').value;
+            try {
+                const response = await fetch('/auth/change-password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ currentPassword, newPassword })
+                });
+                const result = await response.json();
+                if (result.success) {
+                    alert('Password changed successfully!');
+                    document.getElementById('changePasswordForm').reset();
+                } else {
+                    alert(result.error || 'Password change failed');
+                }
+            } catch (error) {
+                alert('Error changing password');
+            }
+        }
     </script>
 </body>
 </html>
