--- a/public/chat.html
+++ b/public/chat.html
@@ -4,52 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exchange Chat</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #f0f4f8;
+      --bg: #f7f7f7;
       --white: #fff;
-      --primary: #2d5d7f;
-      --secondary: #486581;
-      --grey: #6c757d;
-      --light-grey: #e2e6ea;
-      --hover: #34576f;
-      --input-bg: #f8f9fa;
+      --accent: #486581;
+      --grey: #555;
+      --light-grey: #ddd;
     }
 
     body {
-      font-family: 'Merriweather', serif;
+      font-family: 'Cormorant Garamond', serif;
       background-color: var(--bg);
       margin: 0;
       padding: 2rem;
-      color: var(--grey);
     }
 
     .container {
-      max-width: 900px;
+      max-width: 800px;
       margin: 0 auto;
       background: var(--white);
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.05);
       padding: 2rem;
     }
 
     .chat-header {
       border-bottom: 2px solid var(--light-grey);
-      padding-bottom: 1.5rem;
-      margin-bottom: 2.5rem;
+      padding-bottom: 1rem;
+      margin-bottom: 2rem;
     }
 
     .chat-header h2 {
-      color: var(--primary);
+      color: var(--accent);
       margin: 0;
-      font-family: 'Playfair Display', serif;
-      font-size: 2rem;
-    }
-
-    .chat-header p {
-      color: var(--secondary);
-      font-size: 1rem;
     }
 
     .chat-messages {
@@ -57,33 +46,25 @@
       overflow-y: auto;
       padding: 1rem;
       background: #fafafa;
-      border-radius: 10px;
-      margin-bottom: 1.5rem;
-      box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
 
     .message {
-      margin-bottom: 1.8rem;
+      margin-bottom: 1.5rem;
       padding: 1rem;
       border-radius: 8px;
       background: var(--white);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      transition: transform 0.2s ease-in-out;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
 
     .message.sent {
       background: #f1f7fa;
       margin-left: 20%;
-      border-radius: 12px 0 12px 12px;
     }
 
     .message.received {
       margin-right: 20%;
-      border-radius: 0 12px 12px 12px;
-    }
-
-    .message:hover {
-      transform: scale(1.02);
     }
 
     .message-header {
@@ -92,10 +73,6 @@
       margin-bottom: 0.5rem;
       font-size: 0.9rem;
       color: var(--grey);
-    }
-
-    .message-header span {
-      font-weight: 500;
     }
 
     .message-input {
@@ -107,39 +84,25 @@
       flex-grow: 1;
       padding: 1rem;
       border: 1px solid var(--light-grey);
-      border-radius: 10px;
-      background: var(--input-bg);
+      border-radius: 8px;
       resize: none;
       font-family: inherit;
       font-size: 1rem;
-      color: var(--grey);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: border-color 0.2s;
-    }
-
-    textarea:focus {
-      border-color: var(--primary);
-      outline: none;
     }
 
     button {
-      background: var(--primary);
-      color: var(--white);
+      background: var(--accent);
+      color: white;
       border: none;
       padding: 0.8rem 1.5rem;
       border-radius: 8px;
       cursor: pointer;
       font-size: 1rem;
-      transition: background 0.3s, transform 0.2s;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background: var(--hover);
-      transform: translateY(-2px);
-    }
-
-    button:active {
-      transform: translateY(2px);
+      background: #2e4a60;
     }
   </style>
 </head>
@@ -147,7 +110,7 @@
   <div class="container">
     <div class="chat-header">
       <h2>Exchange Chat</h2>
-      <p id="exchange-details">Discuss your exchanges and collaborate with ease.</p>
+      <p id="exchange-details"></p>
     </div>
     
     <div class="chat-messages" id="chat-messages"></div>
