Update team member roles to reflect backend and frontend

--- a/public/About us.html
+++ b/public/About us.html
@@ -82,24 +82,28 @@
             <div class="team-member">
                 <img src="ceo.jpg" alt="CEO">
                 <h3>Haitam Agnao</h3>
-                <p>Chief Executive Officer</p>
+                <p>Backend Developer</p>
             </div>
             <div class="team-member">
                 <img src="cfo.jpg" alt="CFO">
                 <h3>Charaf eddine bourrich</h3>
-                <p>Chief Financial Officer</p>
+                <p>Frontend Developer</p>
             </div>
             <div class="team-member">
                 <img src="cto.jpg" alt="CTO">
                 <h3>Amine Johri</h3>
-                <p>Chief Technology Officer</p>
+                <p>Frontend Developer</p>
             </div>
             <div class="team-member">
                 <img src="editor.jpg" alt="Editor">
                 <h3>Anas mouchahid</h3>
-                <p>Chief Editorial Officer</p>
+                <p>Frontend Developer</p>
             </div>
-        </div>
+            <div class="team-member">
+                <img src="editor.jpg" alt="Editor">
+                <h3>Abderrahim Jlil</h3>
+                <p>Frontend Developer</p>
+            </div>            
     </section>
 
     <script>
