--- a/public/checkout.html
+++ b/public/checkout.html
@@ -13,12 +13,11 @@
             <img src="img/logo (2).png" alt="Bookshelf">
         </a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
+            <li><a href="main.html">Home</a></li>
+            <li><a href="product.html">Shop</a></li>
         </ul>
         <div class="nav-icons">
             <a href="carte page.html"><img src="img/cart-icon.png" alt="Cart"></a>
-            <a href="#"><img src="img/more.png" alt="Menu"></a>
         </div>
     </nav>
 
